# deepsport

./: .dockerignore  .env.template  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  docker-compose.yml  job.sh  pyproject.toml  setup.py
configs/: ballheight.py  ballistic.py  ballseg.py  ballsize.py  ballsize_from_ballseg.py  ballstate.py  pifball.py  scoreboards.py
data/: evreux_1minute_ball_positions.pickle  evreux_2minutes_ball_positions.pickle
experiment/models/: custom.py  icnet.py
experiment/tasks/: ballseg.py  detection.py
models/: ballistic.py  icnet.py  other.py  tensorflow.py
notebooks/: Figures.ipynb  load_ballsize_experiment.ipynb  run_ballseg_experiment.ipynb  run_ballsize_experiment.ipynb  run_ballstate_experiment.ipynb  run_pifball_experiment.ipynb  use_ballstate_to_filter_sequence.ipynb  visualize_ballsize_experiment.ipynb
scripts/: detect_balls_instants_dataset.py  detect_balls_raw_sequences.py  predict_trajectories.py  prepare_ball_states_dataset.py  prepare_ball_views_dataset.py  prepare_ballistic_raw_sequences_dataset.py  prepare_camera_views_dataset.py  process_raw_sequences.py
tasks/: ballheight.py  ballistic.py  ballsize.py  ballsize_from_ballseg.py  ballstate.py  classification.py  detection.py  pifball.py  scoreboards.py  unsupervised_pretraining.py
tasks/ballistic/: baseline.py  common.py
tests/: test_experiment.py
