[project]
name = "deepsport"
version = "1.6.0"
authors = [
    {name = "Gabriel Van Zandycke", email = "gabriel.vanzandycke@hotmail.com"},
]
description = "Experimentation framework for computer vision"
requires-python = "~=3.10"
dependencies = [
    "mlworkflow>=0.6.0",
    "dill>=0.3.6",
    "numpy>=1.22",
    "calib3d>=2.10.0",
    "pandas>=1.4.2",
    "tensorflow>=2.11",
    "python-dotenv>=0.21",
    "scikit-learn>=1.2",
    "jupyter>=1.0",
    "tf_layers @ git+https://github.com/gabriel-vanzandycke/tf_layers@main",
    "icnet_tf2 @ git+https://github.com/gabriel-vanzandycke/icnet_tf2@master",
    "experimentator",
    "deepsport-utilities",
    "dataset-utilities",
]
readme = "README.md"
license = {file = "LICENSE.md"}
urls.Homepage = "https://github.com/gabriel-vanzandycke/deepsport"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib", # required to resolve imported python modules of git submodules
]

[tool.setuptools]
packages = ["models", "tasks"] # packages 'models' and 'tasks' folders

[tool.uv]
package = true # forces packaging 'deepsport'
dev-dependencies = ["pytest>=8.3"]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
experimentator = { workspace = true }
deepsport-utilities = { workspace = true }
dataset-utilities = { workspace = true }

[tool.ruff.lint]
ignore = ["E731", "E741"]
unfixable = []
